# bot

./: main.py  pyproject.toml
.github/workflows/: bot_deply.yaml
src/: main.py
