[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Yoni Jacobi <yony@slatescience.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
telegram = "^0.0.1"
functions-framework = "^3.5.0"
python-telegram-bot = "^21.0.1"
google-cloud-pubsub = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
